# config2

./: .ackrc  .clang-format  .ctags  .editorconfig  .gitattributes  .gitconfig  .gitignore  .gitmodules  .khdrc  .luacheckrc  .luarc.json  .tigrc  Blender Keymap.py  Fix.scpt  KeyboardMaestroMacros.kmsync  direnvrc  ghostty  global_gitignore  install.rb  iosevka.toml  iterm2-github.json  ocamlinit  setup.sh  tmux.conf
.github/: dependabot.yml
.kwm/: kwmrc
Dash.dashsync/: Preferences.plist
OmniFocus/: Come on this should work please.omnijs  build.ninja  lib.js  myplugin.js  myplugin.omnijs
bat/: config
ctags/: JavaScript.ctags
extra/: README.md
fish/: config.fish  fish_variables  fixall.fish  git.fish  worktrees.fish
git/: ignore
hunk/: config.toml
inkscape/: preferences.xml
iterm2/: AppSupport
karabiner/: karabiner.json
kitty/: kitty.conf
lib/: file-to-data-url.js
nvim/: abbreviations.vim  autocmds.vim  defaults.vim  filetype.lua  init.lua  init.vim  lazy-lock.json  mappings.vim  spell
opencode/: AGENTS.md  opencode.jsonc
projects/call-c-from-lua/: CMakeLists.txt  Makefile  README.md  lib.c  useit.lua
projects/rust_tools/: Cargo.toml
projects/rust_tools/src/git_experiments/: main.rs
projects/rust_tools/src/lib/: cmd_helpers.rs  git_helpers.rs  mod.rs
projects/rust_tools/src/lint_history/: main.rs
projects/rust_tools/src/refresh_repos/: main.rs
projects/rust_tools/src/timelapse/: main.rs
rstudio/: rstudio-prefs.json
rubocop/: config.yml
scripts/: all-timelapses-to-video  allcolors  big-timelapse  branch  brew-dep-graph.rb  camelcase.rb  camelcase_everything.rb  colemak2qwerty  cpr  eslint-mappings.json  fixall  git-blame-ahead  gitstats.rb  gsub_in_file.ml  gsub_in_file.rb  human_id  issue_number.rb  jira-ticket.py  json.ml  json_to_xml.rb  juliaformat  kmmerge  lint  lint_master  lint_other  lintstats.mjs  log.ml  logtofile.js  makebranchname.js  mangle-pdf  ndp  np  nuke-node-modules  package.json  patchlint  pickfile.cc  prec  pyproject.toml  refresh  revolut  (+10 more)
sonic-pi.net/: gui-settings.ini
tools/: dune-project  tools.install
(+146 files in other folders)
