[package]
name = "rust_tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "git_experiments"
path = "src/git_experiments/main.rs"

[[bin]]
name = "refresh_repos"
path = "src/refresh_repos/main.rs"

[[bin]]
name = "timelapse"
path = "src/timelapse/main.rs"

[lib]
path = "src/lib/mod.rs"

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.24"
dirs = "5.0.1"
git2 = "0.17.1"
termcolor = "1.3.0"
thiserror = "1.0.48"
rayon = "1.8.0"
