[package]
name = "rust_tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "git_experiments"
path = "src/git_experiments/main.rs"

[[bin]]
name = "refresh_repos"
path = "src/refresh_repos/main.rs"

[[bin]]
name = "timelapse"
path = "src/timelapse/main.rs"

[[bin]]
name = "lint_history"
path = "src/lint_history/main.rs"

[lib]
path = "src/lib/mod.rs"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
dirs = "6.0.0"
git2 = "0.20.2"
termcolor = "1.4.1"
thiserror = "2.0.18"
rayon = "1.11.0"
